--- a/mysql/config/config.json
+++ b/mysql/config/config.json
@@ -10,7 +10,7 @@
   "migrate": {
     "username": "postgres",
     "password": "ims062018",
-    "database": "cimop_migrate",
+    "database": "eris",
     "host": "localhost",
     "port":5432,
     "dialect": "postgres"
