--- a/mysql/config/config.json
+++ b/mysql/config/config.json
@@ -2,7 +2,15 @@
   "development": {
     "username": "postgres",
     "password": "ims062018",
-    "database": "etampes",
+    "database": "imma",
+    "host": "localhost",
+    "port":5432,
+    "dialect": "postgres"
+  },
+  "cabrad": {
+    "username": "postgres",
+    "password": "ims062018",
+    "database": "sucy_cabrad",
     "host": "localhost",
     "port":5432,
     "dialect": "postgres"
