--- a/mysql/config/config.json
+++ b/mysql/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "ims062018",
-    "database": "imma",
+    "database": "messaoudi",
     "host": "localhost",
     "port":5432,
     "dialect": "postgres"
@@ -10,7 +10,7 @@
   "cabrad": {
     "username": "postgres",
     "password": "ims062018",
-    "database": "sucy_cabrad",
+    "database": "messaoudi_cabrad",
     "host": "localhost",
     "port":5432,
     "dialect": "postgres"
